kubernetes/overlays/apps/svc/applications/outline/network-policies/allow-ingress-controller.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: outline
      app.kubernetes.io/name: outline
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          role: ingress-controller
    ports:
    - protocol: TCP
      port: 8080
